Add few placholder html files

--- a/src/MyChessWeb/wwwroot/index.html
+++ b/src/MyChessWeb/wwwroot/index.html
@@ -4,13 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,user-scalable=yes" />
     <title>My Chess</title>
-    <style>
-        body {
-            font-family: 'Segoe UI';
-            background-color: black;
-            color: white;
-        }
-    </style>
+    <script type="text/javascript" src="https://alcdn.msauth.net/lib/1.2.1/js/msal.min.js" integrity="sha384-Z4L5heyGO9VZ/MBCDx9GRtQW50Hrmp32ByIKuqwFesWyB+MDNy9ueVgclolfwj1Q" crossorigin="anonymous"></script>
+    <link href="css/site.css" rel="stylesheet" />
+    <script src="js/auth.js"></script>
+    <script src="js/site.js"></script>
 </head>
 <body>
     <div>
