--- a/src/MyChessReact/public/index.html
+++ b/src/MyChessReact/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <script type="text/javascript" src="%PUBLIC_URL%/configuration.js"></script>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
