Add Apple specific PWA header

--- a/src/MyChessReact/public/index.html
+++ b/src/MyChessReact/public/index.html
@@ -17,6 +17,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="#353535">
+  <meta name="apple-mobile-web-app-title" content="My Chess">
   <link rel="apple-touch-icon" sizes="512x512" href="logo_512x512.png">
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
