Add basic UI placeholders and styles

--- a/src/MyChess.Client/wwwroot/index.html
+++ b/src/MyChess.Client/wwwroot/index.html
@@ -12,7 +12,15 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">
+        <div class="welcome">
+            <div class="welcome-Text">
+                <img src="images/logo.svg" />
+                <br />
+                Loading...
+            </div>
+        </div>
+    </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
