Add cookie consent support

--- a/src/MyChess.Client/wwwroot/index.html
+++ b/src/MyChess.Client/wwwroot/index.html
@@ -2,47 +2,48 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>My Chess</title>
-    <link rel="icon" href="favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description"
-          content="My Chess is social (and not that serious) chess game where you can play chess online with your friends. You can comment your moves and put some pressure to your friends (in fun way of course!)." />
-    <link rel="apple-touch-icon" href="/images/logo_192x192.png" />
-    <!--
-        manifest.json provides metadata used when your web app is installed on a
-        user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-      -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="#353535">
-    <meta name="apple-mobile-web-app-title" content="My Chess">
-    <link rel="apple-touch-icon" sizes="512x512" href="/images/logo_512x512.png">
-    <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/app.css" rel="stylesheet" />
-    <link href="MyChess.Client.styles.css" rel="stylesheet" />
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<title>My Chess</title>
+	<link rel="icon" href="favicon.ico" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="theme-color" content="#000000" />
+	<meta name="description"
+		  content="My Chess is social (and not that serious) chess game where you can play chess online with your friends. You can comment your moves and put some pressure to your friends (in fun way of course!)." />
+	<link rel="apple-touch-icon" href="/images/logo_192x192.png" />
+	<!--
+		manifest.json provides metadata used when your web app is installed on a
+		user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+	  -->
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="#353535">
+	<meta name="apple-mobile-web-app-title" content="My Chess">
+	<link rel="apple-touch-icon" sizes="512x512" href="/images/logo_512x512.png">
+	<base href="/" />
+	<link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+	<link href="css/app.css" rel="stylesheet" />
+	<link href="MyChess.Client.styles.css" rel="stylesheet" />
 </head>
 
 <body>
-    <div id="app">
-        <div class="welcome">
-            <div class="welcome-Text">
-                <img src="images/logo.svg" />
-                <br />
-                Loading...
-            </div>
-        </div>
-    </div>
+	<div id="app">
+		<div class="welcome">
+			<div class="welcome-Text">
+				<img src="images/logo.svg" />
+				<br />
+				Loading...
+			</div>
+		</div>
+	</div>
 
-    <div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
-    </div>
-    <script src="_content/Microsoft.Authentication.WebAssembly.Msal/AuthenticationService.js"></script>
-    <script src="_framework/blazor.webassembly.js"></script>
+	<div id="blazor-error-ui">
+		An unhandled error has occurred.
+		<a href="" class="reload">Reload</a>
+		<a class="dismiss">🗙</a>
+	</div>
+	<script src="_content/Microsoft.Authentication.WebAssembly.Msal/AuthenticationService.js"></script>
+	<script src="js/app.js"></script>
+	<script src="_framework/blazor.webassembly.js"></script>
 </body>
 
 </html>
