--- a/src/MyChess.Client/wwwroot/index.html
+++ b/src/MyChess.Client/wwwroot/index.html
@@ -44,6 +44,7 @@
 	<script src="_content/Microsoft.Authentication.WebAssembly.Msal/AuthenticationService.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/settings.js"></script>
+	<script src="js/play.js"></script>
 	<script src="_framework/blazor.webassembly.js"></script>
 </body>
 
