--- a/src/MyChess.Client/wwwroot/index.html
+++ b/src/MyChess.Client/wwwroot/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-	<div id="app">
+	<div id="App">
 		<div class="welcome">
 			<div class="welcome-Text">
 				<img src="images/logo.svg" />
