--- a/src/MyChess.Client/wwwroot/index.html
+++ b/src/MyChess.Client/wwwroot/index.html
@@ -29,7 +29,7 @@
 	<div id="App">
 		<div class="welcome">
 			<div class="welcome-Text">
-				<img src="images/logo.svg" />
+				<img src="images/logo.svg" class="Load-logo" />
 				<br />
 				Loading...
 			</div>
