--- a/src/MyChess.Client/wwwroot/index.html
+++ b/src/MyChess.Client/wwwroot/index.html
@@ -23,6 +23,7 @@
 	<link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
 	<link href="css/app.css" rel="stylesheet" />
 	<link href="MyChess.Client.styles.css" rel="stylesheet" />
+	<link href="manifest.json" rel="manifest" />
 </head>
 
 <body>
@@ -46,6 +47,7 @@
 	<script src="js/settings.js"></script>
 	<script src="js/play.js"></script>
 	<script src="_framework/blazor.webassembly.js"></script>
+	<script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
 
 </html>
