Update app insights usage at the client

--- a/src/MyChess.Client/wwwroot/index.html
+++ b/src/MyChess.Client/wwwroot/index.html
@@ -30,6 +30,7 @@
 			ld: -1,
 			crossOrigin: "anonymous",
 			cfg: {
+				instrumentationKey: "", // leave this blank
 				disableFetchTracking: false,
 				enableCorsCorrelation: true,
 				enableRequestHeaderTracking: true,
